--- a/src/main/resources/templates/admin/show.html
+++ b/src/main/resources/templates/admin/show.html
@@ -11,7 +11,7 @@
 <p th:text="${user.surname}">VALUE</p>
 <p th:text="${user.email}">VALUE</p>
 <p th:text="${user.username}">VALUE</p>
-<p th:text="${user.getRoleNames()}">VALUE</p>
+<p th:text="${user.getRoles()}">VALUE</p>
 
 </body>
 </html>
