--- a/src/main/resources/templates/user/show.html
+++ b/src/main/resources/templates/user/show.html
@@ -6,11 +6,11 @@
 </head>
 <body>
 
-<p th:text="${user.getId()}">VALUE</p>
-<p th:text="${user.getName()}">VALUE</p>
-<p th:text="${user.getSurname()}">VALUE</p>
-<p th:text="${user.getEmail()}">VALUE</p>
-<p th:text="${user.getUsername}">VALUE</p>
+<p th:text="${user.id}">VALUE</p>
+<p th:text="${user.name}">VALUE</p>
+<p th:text="${user.surname}">VALUE</p>
+<p th:text="${user.email}">VALUE</p>
+<p th:text="${user.username}">VALUE</p>
 <p th:text="${user.getRoleNames()}">VALUE</p>
 
 <li class="nav-item">
